testCases/parserTestCases/error/paramsE.cs16
/*
    Params
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

int x;

int main(){
    return 2;
}

void f(int[] n, bool six int num, int integer){;
}

void f(int x[){;}
void h int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[],int x[]){;}
void g(ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x,ref int x{;}
